sandbox/output
OneHundredDoors.java:5: error: ';' expected
        if (amountOfDoorsPassed == 1) return "O"
                                                ^
1 error
